Issue: Tiles are overlapping in mobile view due to absolute positioning. Resolved using css grid.

--- a/css/main.sass
+++ b/css/main.sass
@@ -169,42 +169,56 @@ a.topNavLinksRight, .topNavLinksRight
 .resultsBody
   margin-top: 68px
   display: grid
-  grid-template-columns: repeat(4, 1fr)
+  grid-template-columns: repeat(auto-fit, minmax(200px, auto))
+  // grid-template-columns: minmax(auto, 300px)
+  grid-template-rows: repeat(6, auto)
   grid-gap: 42px
 
 .resultsFilter
   grid-column: 1 / 2
 
 .tilesContainer
-  height: 346px
   width: 100%
-  position: relative
-
-.tilesAddToCart
-    height: 24px
-    width: 24px
-    background-position: -96px 0
+  display: grid
+  grid-template-rows: auto 37px auto
+  grid-template-columns: 1fr
 
 .tilesImage
+  grid-column: 1 / span 2
+  grid-row: 1 / span 2
   width: 100%
 
-.tilesHighlightLeft
+.tilesHighlight
+  grid-column: 1 / span 2
+  grid-row: 2 / span 2
+  display: grid
+  grid-template-rows: 33px 22px 22px 48px
+  grid-template-columns: 64% 36%
+  grid-auto-flow: column
+
+.tilesWhiteBlock
+  height: 100%
+  width: 100%
+  grid-column: 1 / span 1
+  grid-row: 1 / span 4
   background-color: #fff
-  width: 65%
-  position: absolute
-  z-index: 10
-  margin-top: -37px
-  padding-top: 37px
 
 .tilesTitle
   font-weight: bold
   font-size: 16px
   color: #22232b
+  grid-column: 1
+  grid-row: 2
+  z-index: 1
 
 .tilesCategory
   font-size: 11px
   color: #22232b
   opacity: 0.5
+  grid-column: 1
+  grid-row: 3
+  z-index: 1
+  align-self: center
 
 .tilesRating
   background-image: url('../img/ratings_sprite.svg')
@@ -212,34 +226,29 @@ a.topNavLinksRight, .topNavLinksRight
   height: 24px
   width: 71px
   background-position: 0 -24px
-  margin-top: 18px
-
-.tilesHighlightRight
-  position: absolute
-  right: 0
-  display: grid
-  grid-template-columns: 1fr
-  justify-items: end
+  align-self: end
+  grid-column: 1
+  grid-row: 4
+  z-index: 1
 
 .tilesPrice
   font-size: 16px
-  margin-top: 16px
+  justify-self: end
+  align-self: start
+  grid-column: 2
+  grid-row: 3
+  z-index: 1
 
 .tilesAddToCart
-  margin-top: 16px
+  height: 24px
+  width: 24px
+  background-position: -96px 0
+  grid-column: 2
+  grid-row: 4
+  z-index: 1
+  align-self: end
+  justify-self: end
 
-@media only screen and (max-width: 1024px)
-  .resultsBody
-    grid-template-columns: repeat(3, 1fr)
-
-
-@media only screen and (max-width: 768px)
-  .resultsBody
-    grid-template-columns: repeat(2, 1fr)
-
-@media only screen and (max-width: 640px)
-  .resultsBody
-    grid-template-columns: repeat(1, 1fr)
 
 
 
